# lsp-detr

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/experiment/: NuFuseSmoke.yaml
configs/logger/: mlflow.yaml  tensorboard.yaml
lsp_detr/: __main__.py  configuration.py  det_meta_arch.py  image_processing.py  lightning_module.py
lsp_detr/callbacks/: tile_mask_export.py
lsp_detr/data/: __init__.py  nufuse.py
lsp_detr/data/datasets/: __init__.py  predict_dataset.py  sp_dataset.py  testing_dataset.py  types.py
lsp_detr/data/transforms/: elastic_transform.py  horizontal_flip.py  random_rotate90.py  random_sized_crop.py  vertical_flip.py
lsp_detr/data/utils/: __init__.py
lsp_detr/metrics/: __init__.py  aji.py  ap_2018_dsb.py  binary_panoptic_quality.py  collections.py  f1_score.py  panoptic_quality.py
lsp_detr/misc/: linear_assignment.py  masks2centroids.py
lsp_detr/modeling/: criterion.py  lsp_detr.py  matcher.py
lsp_detr/modeling/layers/: cayley_string.py  mlp.py
scripts/: verify_smoke_metrics.py
tests/: test_lightning_module_contract.py  test_metrics_empty_cases.py
