[project]
name = "lsp-detr"
version = "0.1.0"
authors = [{ name = "Matěj Pekár", email = "matejpekar@mail.muni.cz" }]
requires-python = ">=3.12, <3.13"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.16.2",
    "scipy>=1.12.0",
    "torchmetrics>=1.3.0.post0",
    "albumentations>=1.3.1",
    "mlflow>=2.10.2",
    "lightning>=2.2.1",
    "hydra-core>=1.3.2",
    "timm>=1.0.7",
    "datasets>=3.2.0",
    "stardist",
    "transformers>=4.50.3",
    "einops>=0.8.1",
    "torch-linear-assignment>=0.0.3",
    "hf-xet>=1.1.0",
    "rationai-mlkit>=0.3.1",
    "psutil>=7.2.0",
    "nvidia-ml-py>=13.590.44",
]


[dependency-groups]
dev = ["mypy>=1.11.2", "ruff>=0.6.8"]


[tool.uv.sources]
stardist = { path = "lib/stardist" }
rationai-mlkit = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git" }
